<?xml version="1.0"?>
<!-- doc: http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>kinect</name>
  <version>0.0.0</version>
  <description>
    The kinect package provides nodes to acquire information
    from a Microsoft Kinect device.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>
<!--
  <depend>freenect_launch</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>openni_camera</depend>
  <depend>openni_launch</depend>
  <depend>orocos_kdl</depend>
  <depend>orocos_kinematics_dynamics</depend>
  <depend>pcl_ros</depend>
  <depend>rosbag</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>rosunit</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
-->

  <!-- AD -->
  <!-- no dependency -->

  <export>
    <rosdoc config="rosdoc.yaml" /> <!-- http://wiki.ros.org/rosdoc_lite -->
  </export>
</package>
